# Caustic-Design

./: .gitignore  Initial_Presentation.odp  Intermediate_Presentation .odp  README.md  target surface
3Doptimization_reslts/: Eint  Eint+Ebar  Eint+Ebar+Edir  Eint+Ebar~  Iterativ_schur
Blender_scenes/: results_1.blend  results_1.blend1
Caustic/: dialog.h  ramp.h
Caustic_Design/: CMakeLists.txt  Caustic_Design.pro  assign.cpp  caustic.ui  config.h  dialog.h  dialog.ui  domain.h  energy.cpp  glviewer.cpp  glviewer.h  gradientdescent.cpp  gradientdescent.h  grid.h  init.cpp  interpolation.cpp  interpolation.h  io.cpp  main.cpp  optimal_transport.cpp  optimal_transport.cpp.orig  optimal_transport.h  primitives.h  regularity.cpp  render.cpp  rt2.h  scene.h  scene.h.orig  singularity.cpp  singularity.h  sites.cpp  sites.cpp.orig  types.h  voronoi_creation.cpp  voronoi_creation.h  window.cpp  window.cpp.orig  window.h
Caustic_Design/CMake/: FindLBFGS.cmake  FindSUITESPARSE.cmake
OTM-Results/Circle/: circle.weight
OTM-Results/Einstein_600x600_radial_v2/: einstein_500.weight
SuiteSparse/AMD/Demo/: amd_demo  amd_demo2  amd_l_demo  amd_simple
SuiteSparse/CAMD/Demo/: camd_demo  camd_demo2  camd_l_demo  camd_simple
SuiteSparse/CCOLAMD/Demo/: ccolamd_example  ccolamd_l_example
SuiteSparse/CHOLMOD/Demo/: cholmod_demo  cholmod_l_demo  cholmod_simple  timelog.m
SuiteSparse/COLAMD/Demo/: colamd_example  colamd_l_example
SuiteSparse/CSparse/Demo/: cs_demo1  cs_demo2  cs_demo3
SuiteSparse/CXSparse/Demo/: cs_ci_demo1  cs_ci_demo2  cs_ci_demo3  cs_cl_demo1  cs_cl_demo2  cs_cl_demo3  cs_demo1  cs_demo2  cs_demo3  cs_di_demo1  cs_di_demo2  cs_di_demo3  cs_dl_demo1  cs_dl_demo2  cs_dl_demo3  cs_idemo  cs_ldemo
SuiteSparse/KLU/Demo/: klu_simple  kludemo  kluldemo
SuiteSparse/LDL/Demo/: ldlamd  ldllamd  ldllmain  ldllsimple  ldlmain
SuiteSparse/RBio/Demo/: RBdemo
SuiteSparse/SPQR/Demo/: qrdemo  qrsimple  qrsimplec
SuiteSparse/UMFPACK/Demo/: numeric.umf  symbolic.umf  umfpack_di_demo  umfpack_dl_demo  umfpack_simple  umfpack_zi_demo  umfpack_zl_demo
Target_Surface/: CMakeLists.txt  CMakeLists.txt~  SurfaceMesh.cpp  SurfaceMesh.h  SurfaceModel.cpp  SurfaceModel.h  Target_Surface.pro  costFunctor.h  cost_functors.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pro_v2  rendering.cpp  rendering.h  targetoptimization.cpp  targetoptimization.h  utils.cpp  utils.h
Target_Surface/3dmodels/: circle_1.obj.mtl  cube.3ds  model_test  optimize_result_1  optimize_result_3.obj.mtl  optimize_result_5_.obj.mtl  optimize_results_6  optimize_results_Ereg  optimize_results_edir  surface.stl  test  test.mtl
Target_Surface/3dmodels/Results_2/: optimize_results  optimize_results_Eint_Ebar
bnot-src/: MANUAL
bnot-src/bbnot/: CMakeLists.txt  bbnot.ui  convex_polygon.h  dialog.h  dialog.ui  domain.h  energy.cpp  glviewer.cpp  glviewer.h  histogram.cpp  init.cpp  io.cpp  line_search.h  main.cpp  optimizer.cpp  primitives.h  pw_line_search.h  regularity.cpp  render.cpp  rt2.h  scene.h  sites.cpp  types.h  util.h  window.cpp  window.h
bnot-src/ibnot/: CMakeLists.txt  Ibnot.files  Ibnot.includes  assign.cpp  convex_polygon.h  dialog.ui  enriched_segment.h  glviewer.cpp  histogram.cpp  ibnot.ui  init.cpp  main.cpp  optimizer.cpp  pgm.h  primitives.h  pw_line_search.h  scene.h  types.h  window.cpp  window.h
bnot-src/pbnot/: CMakeLists.txt  dialog.h  dialog.ui  energy.cpp  glviewer.cpp  glviewer.h  histogram.cpp  init.cpp  io.cpp  main.cpp  optimizer.cpp  pbnot.ui  pw_line_search.h  regularity.cpp  render.cpp  scene.h  sites.cpp  window.cpp  window.h
bnot-src/pbnot/matrix/: sparse_matrix.cpp
demo-models/: cube.stl  receiver_target_positions
ray_tracer/: Assets.cpp  Assets.hpp  CMakeLists.txt  Context.cpp  Context.hpp  GLSLShader.cpp  GLSLShader.hpp  Image.cpp  Image.hpp  Makefile  Model.cpp  Model.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  TriMesh.cpp  TriMesh.hpp  View3D.cpp  View3D.hpp  ViewRender.cpp  ViewRender.hpp  Window.cpp  Window.hpp
ray_tracer/cmake/Modules/: FindOpenImageIO.cmake
ray_tracer/data/: checker5.ppm  flowers.ppm
ray_tracer/meshes/: bialetti.off  bunny.off  bunnysimple.off  cow.off  dice.mtl  dragon.off  drei.off  eight.off  europemap.off  hand.off  homer.off  killeroo.off  mannequin.off  plane4x4.off  quad.off  sphere.off
ray_tracer/shaders/: blinnPhongReflection  passpartout.frag  passpartout.vert  preview.frag  preview.vert  view3d.frag  view3d.vert
svgToSingularities/: Singularization.py
temp/: SurfaceModel.cpp  dummy_interpolation_vertices  dynamicAutoDiffEx.cpp
vertices/: vertices_origin  vertices_origin_2  vertices_result  vertices~
voronoi-creator/: Voronoi-Creator.files  console_color.h  convex_polygon.h  domain.h  interpolation.h  line_search.h  main.cpp  pixel.h  primitives.h  rt2.h  scene.h  tst.h  util.h  voronoi-creation.pro  voronoicreator.cpp  voronoicreator.h
web_template/: index.html  index.html~
website/: project.html
